@@ -70,7 +70,11 @@ Build-Depends:
  libxres-dev (>= 1:0.99.1),
  libxfixes-dev (>= 1:3.0.0),
  libxv-dev,
- libxinerama-dev
+ libxinerama-dev,
+# unit tests
+ libglib2.0-dev,
+ xkb-data,
+ x11-xkb-utils,
 Standards-Version: 3.8.3
 Vcs-Git: git://git.debian.org/git/pkg-xorg/xserver/xorg-server
 Vcs-Browser: http://git.debian.org/?p=pkg-xorg/xserver/xorg-server.git
